# rust-wasm-recursive-use-of-an-object-test

./: Cargo.toml  README.md  index.html  index.mjs
src/: lib.rs
